# simple-rag-chatbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.dev/: ETL.py
dev/: ETL.py  datastore.db
dev/data/: user_messages.json
dev/data/articles/: Article 10: How BrewNest Handles Lost and Found Items.txt  Article 1: How to Access Pay Stubs for Employees at BrewNest.txt  Article 2: BrewNest Store Hours and Holiday Schedule for 2025.txt  Article 3: How to Apply for a Job at BrewNest.txt  Article 4: BrewNest Loyalty App: How It Works.txt  Article 5: How to Request Time Off as a BrewNest Employee.txt  Article 6: Wi-Fi and Charging Availability at BrewNest Locations.txt  Article 7: BrewNest’s Refund and Complaint Policy.txt  Article 8: BrewNest Corporate Discount Program.txt  Article 9: Uniform Guidelines for BrewNest Staff.txt
routes/: api.py  home.py
services/: chat_service.py
src/app/: dependencies.py  main.py
src/app/core/: __init__.py  templates.py
src/app/database/: __init__.py  context_data.json  database.py  datastore.db  user_data.json
src/app/infrastructure/: __init__.py  llm_provider.py
src/app/routes/: chat_router.py  root_router.py
src/app/schemas/: __init__.py  messages.py
src/app/services/: chat_service.py
src/app/static/css/: base.css  chat.css
src/app/static/js/: chat.js
src/app/templates/: base.html  index.html
tests/: conftest.py  test_api_ask.py  test_chat_endpoints.py  test_context_retrieval.py  test_database.py
